# HDI

./: .gitignore  README.md  _.py
cba-boxscores/: boxscores.py  pyproject.toml  requirements-dev.txt
cba-boxscores/HDI.BoxScores/: HDI.BoxScores.sln
cba-boxscores/HDI.BoxScores/HDI.BoxScores/: Program.cs
cba-boxscores/HDI.BoxScores/HDI.BoxScores/Configuration/: GoogleOptions.cs
cba-boxscores/HDI.BoxScores/HDI.BoxScores/Properties/: launchSettings.json
cba-boxscores/HDI.BoxScores/HDI.BoxScores/Services/: BoxScoreService.cs
cbb-headshots/: genius.csv  headshots.py  pyproject.toml  requirements-dev.txt  requirements.txt
cbb-headshots/tests/: conftest.py  test_locators.py  test_urls.py
cbb-headshots/typings/googleapiclient/: discovery.pyi
cbb-headshots/typings/mediapipe/tasks/python/vision/: __init__.pyi
cbb-headshots/utils/: url_helper.py
cbb-rolodex/: rolodex.py  rolodex_import.py
college-football-participation/: participation.py
graduate-program-lookup/: institutions.csv  lookup.py  pyproject.toml
headshots/: headshots.py  requirements.txt
rolodex/: metadata.json  requirements.txt
sec-baseball-boxscores/HDI.BoxScores/HDI.BoxScores/: HDI.BoxScores.csproj  appsettings.json
sec-baseball-boxscores/HDI.BoxScores/HDI.BoxScores/Configuration/: BoxScoreOptions.cs  SeleniumOptions.cs
sec-baseball-boxscores/HDI.BoxScores/HDI.BoxScores/Extensions/: GoogleServiceCollectionExtensions.cs  SeleniumServiceCollectionExtensions.cs
