[project]
name = "cba-boxscores"
version = "2026.5.24"
dependencies = [
    "google-api-python-client",
    "playwright",
]

[project.optional-dependencies]
dev = ["mypy"]

[tool.setuptools.packages.find]
exclude = ["typings*"]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501", "E731"]