[project]
name = "cbb-headshots"
version = "2026.5.24"
dependencies = [
    "environs",
    "google-api-python-client",
    "mediapipe",
    "numpy",
    "opencv-python",
    "playwright",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-playwright",
    "pytest-retry",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
exclude = ["models*", "typings*"]

[tool.pytest]
testpaths = ["tests"]
addopts = [
    "-k=not (test_locators and -URLW)",
    "-n=4",
    "--dist=worksteal",
    "--retries=1",
    "--tb=short",
    "--headed",
]
tmp_path_retention_policy = "none"

[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501", "E731"]