[project]
name = "graduate-program-lookup"
version = "2026.6.9"
dependencies = [
    "google-api-python-client",
    "google-genai",
    "tenacity",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
exclude = ["typings*"]

[tool.pytest]
testpaths = ["tests"]
addopts = ["--tb=short"]
tmp_path_retention_policy = "none"

[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501", "E731"]